feat : Complete 1.0.0 Update

--- a/_posts/2021-12-01-Function.md
+++ b/_posts/2021-12-01-Function.md
@@ -2,8 +2,12 @@
 layout: post
 title:  "Function"
 date:   2021-12-01 20:13:04 +0900
-categories: jekyll update
+categories: start
 ---
+
+
+
+# We Provide,
 
 This is an explanation of the functions of "Korean_NLP_Visual".
 
